--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 #----python-------
 find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
-
+set(PYTHON_EXECUTABLE_PATH "${Python3_EXECUTABLE}")
 
 #----python binding------
 include(FetchContent)
